CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT ( FreyaReflect )

SET ( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Build/Static )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Build/Bin )
IF( WIN32 )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/Build/Bin )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/Build/Bin )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_SOURCE_DIR}/Build/Bin )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/Build/Bin )
ENDIF()
SET ( PLUGIN_OUTPUT_DIRECTORY 		 ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/Plugins )
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Build/Bin )
IF( WIN32 )
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/Build/Bin )
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/Build/Bin )
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_SOURCE_DIR}/Build/Bin )
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/Build/Bin )
ENDIF()

SET	( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/../../CMakeFind ${CMAKE_SOURCE_DIR}/../../CMakeIncludes )

FIND_PACKAGE(STLPort REQUIRED)
MESSAGE (STATUS "STLPort: \n\tinclude: ${STLPORT_INCLUDE_DIR} \n\tlibs: ${STLPORT_LIBRARIES}" )
#Set STL port include directories
INCLUDE_DIRECTORIES( ${STLPORT_INCLUDE_DIR} )
#Set stlport linkage
SET(GLOBAL_LINK_LIBRARIES ${STLPORT_LIBRARIES})

IF(MSVC)
    ADD_DEFINITIONS("-D_CRT_SECURE_NO_DEPRECATE")
    ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS")
    ADD_DEFINITIONS("-D_CRT_NONSTDC_NO_DEPRECATE")
    ADD_DEFINITIONS("-D_SECURE_SCL=0")
    ADD_DEFINITIONS("-D_SCL_SECURE_NO_WARNINGS")
    ADD_DEFINITIONS("-D_SCL_SECURE_NO_DEPRECATE")
    ADD_DEFINITIONS("-D_HAS_ITERATOR_DEBUGGING=0")
    ADD_DEFINITIONS(/arch:SSE2)
	SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /D_STLP_DEBUG=1")
ELSE(MSVC)
	SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_STLP_DEBUG=1")
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=hidden ")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden ")
ENDIF(MSVC)

IF(APPLE)
	ADD_DEFINITIONS("-D_STLP_THREADS")
ENDIF(APPLE)

INCLUDE_DIRECTORIES("Lib/Include")

MESSAGE(STATUS "Configuring FreyaReflect library")
ADD_SUBDIRECTORY(Lib)
MESSAGE(STATUS "Configuring FreyaToLua application")
ADD_SUBDIRECTORY(FreyaToLua)