CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT ( FreyaReflect )

SET ( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Build/Static )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Build/Bin )
IF( WIN32 )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/Build/Bin )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/Build/Bin )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_SOURCE_DIR}/Build/Bin )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/Build/Bin )
ENDIF()
SET ( PLUGIN_OUTPUT_DIRECTORY 		 ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/Plugins )
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Build/Bin )
IF( WIN32 )
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/Build/Bin )
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/Build/Bin )
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_SOURCE_DIR}/Build/Bin )
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/Build/Bin )
ENDIF()

SET	( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/../../CMakeFind ${CMAKE_SOURCE_DIR}/../../CMakeIncludes ${CMAKE_SOURCE_DIR}/CMakeModules )


SET(GLOBAL_LINK_LIBRARIES)

IF(MSVC)
    ADD_DEFINITIONS("-D_CRT_SECURE_NO_DEPRECATE")
    ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS")
    ADD_DEFINITIONS("-D_CRT_NONSTDC_NO_DEPRECATE")
    #ADD_DEFINITIONS("-D_SECURE_SCL=0")
    ADD_DEFINITIONS("-D_SCL_SECURE_NO_WARNINGS")
    ADD_DEFINITIONS("-D_SCL_SECURE_NO_DEPRECATE")
    #ADD_DEFINITIONS("-D_HAS_ITERATOR_DEBUGGING=")
    ADD_DEFINITIONS(/arch:SSE2)
	SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /D_STLP_DEBUG=1 /D_HAS_ITERATOR_DEBUGGING=1 /D_ITERATOR_DEBUG_LEVEL=2")
ELSE(MSVC)
	SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_STLP_DEBUG=1")
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=hidden ")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden ")
ENDIF(MSVC)

IF(APPLE)
	ADD_DEFINITIONS("-D_STLP_THREADS")
ENDIF(APPLE)

INCLUDE_DIRECTORIES("FreyaReflect/Include")
INCLUDE_DIRECTORIES("FreyaLua/Include")

MESSAGE(STATUS "Configuring Driver library")
ADD_SUBDIRECTORY(Driver)
