CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT ( FreyaReflect )
SET( PACKAGE_VERSION "0.3.0" )

SET ( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Build/Static )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Build/Bin )
IF( WIN32 )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/Build/Bin )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/Build/Bin )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_SOURCE_DIR}/Build/Bin )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/Build/Bin )
ENDIF()
SET ( PLUGIN_OUTPUT_DIRECTORY 		 ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/Plugins )
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Build/Bin )
IF( WIN32 )
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/Build/Bin )
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/Build/Bin )
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_SOURCE_DIR}/Build/Bin )
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/Build/Bin )
ENDIF()

SET	( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/../../CMakeFind ${CMAKE_SOURCE_DIR}/../../CMakeIncludes ${CMAKE_SOURCE_DIR}/CMakeModules )


SET(GLOBAL_LINK_LIBRARIES)

IF(MSVC)
    ADD_DEFINITIONS("-D_CRT_SECURE_NO_DEPRECATE")
    ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS")
    ADD_DEFINITIONS("-D_CRT_NONSTDC_NO_DEPRECATE")
    ADD_DEFINITIONS("-D_SCL_SECURE_NO_WARNINGS")
    ADD_DEFINITIONS("-D_SCL_SECURE_NO_DEPRECATE")
	ADD_DEFINITIONS("-wd4146 -wd4800 -wd4355 -wd4624 -wd4244 -wd4351 -wd4291")
ELSE(MSVC)
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=hidden ")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden -fno-rtti")
ENDIF(MSVC)

if( UNIX AND NOT APPLE )
add_definitions( -D__STDC_CONSTANT_MACROS -D__STDC_LIMIT_MACROS )
endif()

INCLUDE_DIRECTORIES("FreyaReflect/Include")
INCLUDE_DIRECTORIES("FreyaLua/Include")

MESSAGE(STATUS "Configuring Driver library")
ADD_SUBDIRECTORY(Driver)
