#TODO: 
SET ( RESOURCES Textures.7z Shaders/bump.frag Shaders/bump.vert "${SHARED_PLUGINS}" ${APP_STD_DATA}/StdGUI.7z ${APP_STD_DATA}/StdShaders.7z BumpMapping.layout Demo.lua)
IF( APPLE )
	SET_SOURCE_FILES_PROPERTIES( Textures.7z ${APP_STD_DATA}/StdGUI.7z ${APP_STD_DATA}/StdShaders.7z PROPERTIES MACOSX_PACKAGE_LOCATION Resources )
	SET_SOURCE_FILES_PROPERTIES( Shaders/bump.vert Shaders/bump.frag PROPERTIES MACOSX_PACKAGE_LOCATION Resources/Shaders )
	SET_SOURCE_FILES_PROPERTIES( BumpMapping.layout     PROPERTIES MACOSX_PACKAGE_LOCATION Resources/GUI/layouts )
	SET_SOURCE_FILES_PROPERTIES( Demo.lua               PROPERTIES MACOSX_PACKAGE_LOCATION Resources/Scripts )
	SET_SOURCE_FILES_PROPERTIES( ${SHARED_PLUGINS} PROPERTIES GENERATED YES MACOSX_PACKAGE_LOCATION Plugins )
	ADD_EXECUTABLE( BumpMapping MACOSX_BUNDLE main.cpp ${RESOURCES})
	#installation routines
	INSTALL(TARGETS BumpMapping DESTINATION ${CMAKE_INSTALL_PREFIX})
	INSTALL(CODE "INCLUDE ( ${CMAKE_SOURCE_DIR}/CMakeIncludes/CompleteBundle.cmake )\nMakeCompleteBundle( BumpMapping )")
ELSE( APPLE )
#Non apple platforms 
	IF( WIN32 )
		ADD_EXECUTABLE( BumpMapping main.cpp )
		INSTALL(TARGETS BumpMapping DESTINATION ${CMAKE_INSTALL_PREFIX}/BumpMapping)
		INSTALL(FILES Textures.7z DESTINATION ${CMAKE_INSTALL_PREFIX}/BumpMapping)
		INSTALL(DIRECTORY Shaders  DESTINATION ${CMAKE_INSTALL_PREFIX}/BumpMapping PATTERN ".svn" EXCLUDE)
		INSTALL(FILES ${SHARED_PLUGINS} DESTINATION ${CMAKE_INSTALL_PREFIX}/BumpMapping/Plugins )
		INSTALL(CODE "INCLUDE ( ${CMAKE_SOURCE_DIR}/CMakeIncludes/CompleteBundle.cmake )\nMakeCompleteBundle( BumpMapping )")
	ELSE( WIN32 )
		ADD_EXECUTABLE( BumpMapping main.cpp )
		INSTALL(TARGETS BumpMapping DESTINATION ${CMAKE_INSTALL_PREFIX}/BumpMapping)
		INSTALL(FILES Textures.7z DESTINATION ${CMAKE_INSTALL_PREFIX}/BumpMapping)
		INSTALL(DIRECTORY Shaders  DESTINATION ${CMAKE_INSTALL_PREFIX}/BumpMapping PATTERN ".svn" EXCLUDE)
		INSTALL(FILES ${SHARED_PLUGINS} DESTINATION ${CMAKE_INSTALL_PREFIX}/BumpMapping/Plugins )
		INSTALL(CODE "INCLUDE ( ${CMAKE_SOURCE_DIR}/CMakeIncludes/CompleteBundle.cmake )\nMakeCompleteBundle( BumpMapping )")
	ENDIF( WIN32 )

ENDIF( APPLE )
TARGET_LINK_LIBRARIES( BumpMapping ${RUNTIME_LINK_LIBRARIES} ${GLOBAL_LINK_LIBRARIES} )
