# plugins

INCLUDE_DIRECTORIES ( ../.. )

SET(RESOURCE_PLUGINS_ADDITIONAL_SOURCES
	../ResourceFactory.cpp
	../Resource.cpp
)

IF(BUILD_TGA_DRIVER) 
	
	SET(TGA_DRIVER_SOURCE
		TGADriver.h
		TGADriver.cpp
	)
	
	
	IF(BUILD_SHARED_TGA_DRIVER)
		MESSAGE("Building shared ")
		ADD_DEFINITIONS(-D_FREYA_SHARED_PLUGIN)
		ADD_LIBRARY( TGADriver MODULE ${TGA_DRIVER_SOURCE} TGADriverSharedBuild.cpp ${RESOURCE_PLUGINS_ADDITIONAL_SOURCES} )
		TARGET_LINK_LIBRARIES( TGADriver ${GLOBAL_LINK_LIBRARIES} )
		SET_TARGET_PROPERTIES ( TGADriver PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/Plugins)
		AddPlugin( TGADriver )
	ELSE(BUILD_SHARED_TGA_DRIVER)
		ADD_LIBRARY( TGADriver STATIC ${TGA_DRIVER_SOURCE} TGADriverStaticBuild.cpp )
		SET( FREYA_CORE_LINK_LIBRARIES ${FREYA_CORE_LINK_LIBRARIES} TGADriver )
		SET_PROPERTY( GLOBAL PROPERTY FREYA_CORE_LINK_LIBRARIES_GLOBAL ${FREYA_CORE_LINK_LIBRARIES})
		AddResourcePlugin( TGADriver )
	ENDIF(BUILD_SHARED_TGA_DRIVER)
ENDIF(BUILD_TGA_DRIVER)

IF(BUILD_DDS_DRIVER) 
	
	SET(DDS_DRIVER_SOURCE
		DDSDriver.h
		DDSDriver.cpp
	)
	
	
	IF(BUILD_SHARED_DDS_DRIVER)
		MESSAGE("Building shared ")
		ADD_DEFINITIONS(-D_FREYA_SHARED_PLUGIN)
		ADD_LIBRARY( DDSDriver MODULE ${DDS_DRIVER_SOURCE} DDSDriverSharedBuild.cpp ${RESOURCE_PLUGINS_ADDITIONAL_SOURCES})
		TARGET_LINK_LIBRARIES( DDSDriver ${GLOBAL_LINK_LIBRARIES} )
		SET_TARGET_PROPERTIES ( DDSDriver PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/Plugins)
		AddPlugin( DDSDriver )
	ELSE(BUILD_SHARED_DDS_DRIVER)
		ADD_LIBRARY( DDSDriver STATIC ${DDS_DRIVER_SOURCE} DDSDriverStaticBuild.cpp)
		SET( FREYA_CORE_LINK_LIBRARIES ${FREYA_CORE_LINK_LIBRARIES} DDSDriver )
		SET_PROPERTY( GLOBAL PROPERTY FREYA_CORE_LINK_LIBRARIES_GLOBAL ${FREYA_CORE_LINK_LIBRARIES})
		AddResourcePlugin ( DDSDriver )
	ENDIF(BUILD_SHARED_DDS_DRIVER)
ENDIF(BUILD_DDS_DRIVER)